src/trabalho/trabalho/valida_forms/Valida_formsParser.java
// Generated from C:/Users/Hélder Azevedo/IdeaProjects/repository/src/trabalho/valida_forms\Valida_forms.g4 by ANTLR 4.9.1
package trabalho.valida_forms;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Valida_formsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		TITULO1=18, TITULO2=19, TITULO3=20, TITULO4=21, SUB_TIPO_SERVICO_OP1=22, 
		SUB_TIPO_SERVICO_OP2=23, SUB_TIPO_SERVICO_OP3=24, CT_OP1=25, CT_OP2=26, 
		AP_NIB=27, AP_RESIDENCIA=28, AP_ESTADO_CIVIL=29, AP_HAB_LIT=30, RH_FERIAS=31, 
		RH_FALTAS=32, RH_AUSENCIAS=33, INT=34, DG=35, IBAN=36, ESTADO_CIVIL=37, 
		HAB_LITERARIAS=38, MOEDA=39, IMOB=40, BARRA=41, WORD=42, NEWLINE=43, WS=44;
	public static final int
		RULE_prog = 0, RULE_start = 1, RULE_titulo1_var = 2, RULE_titulo2_var = 3, 
		RULE_titulo3_var = 4, RULE_titulo4_var = 5, RULE_tipo_de_reporte = 6, 
		RULE_stsop1_var = 7, RULE_stsop2_var = 8, RULE_stsop3_var = 9, RULE_cotacoes_descontos = 10, 
		RULE_alteracoes_pessoais = 11, RULE_ferias_just = 12, RULE_form_reporte1 = 13, 
		RULE_form_reporte2 = 14, RULE_form_reporte3 = 15, RULE_form_cotdes1 = 16, 
		RULE_form_cotdes2 = 17, RULE_form_altpess1 = 18, RULE_form_altpess2 = 19, 
		RULE_form_altpess3 = 20, RULE_form_altpess4 = 21, RULE_form_ferjus1 = 22, 
		RULE_form_ferjus2 = 23, RULE_form_ferjus3 = 24, RULE_date = 25, RULE_val_form_reporte_alfa = 26, 
		RULE_error = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "start", "titulo1_var", "titulo2_var", "titulo3_var", "titulo4_var", 
			"tipo_de_reporte", "stsop1_var", "stsop2_var", "stsop3_var", "cotacoes_descontos", 
			"alteracoes_pessoais", "ferias_just", "form_reporte1", "form_reporte2", 
			"form_reporte3", "form_cotdes1", "form_cotdes2", "form_altpess1", "form_altpess2", 
			"form_altpess3", "form_altpess4", "form_ferjus1", "form_ferjus2", "form_ferjus3", 
			"date", "val_form_reporte_alfa", "error"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'1.1'", "':'", "'1.2'", "'1.3'", "'1.4'", "'1.5'", "'2.1'", "'2.2'", 
			"'2.3'", "'2.4'", "'2.5'", "'3.1'", "'3.2'", "'3.3'", "'3.4'", "'3.5'", 
			"'4.1'", "'Reportar Erro'", "'Cotacoes e Descontos'", "'Alteracao Dados Pessoais'", 
			"'Ferias e Justificacoes'", "'1 Reportar anomalia de comunicacao'", "'2 Reportar anomalia em equipamento'", 
			"'3 Reportar anomalia em aplicacao'", "'1 Requerer cotacao para venda por grosso'", 
			"'2 Solicitar autorizacao para aplicacao de desconto financeiro'", "'1 Alteracao de NIB'", 
			"'2 Alteracao de residencia'", "'3 Alteracao de estado civil para efeitos de IRS'", 
			"'4 Atualizacao de habilitacoes literarias'", "'1 Marcar ferias'", "'2 Justificar falta ja ocorrida'", 
			"'3 Informar ausencia futura'", null, null, null, null, null, null, null, 
			"'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "TITULO1", "TITULO2", "TITULO3", 
			"TITULO4", "SUB_TIPO_SERVICO_OP1", "SUB_TIPO_SERVICO_OP2", "SUB_TIPO_SERVICO_OP3", 
			"CT_OP1", "CT_OP2", "AP_NIB", "AP_RESIDENCIA", "AP_ESTADO_CIVIL", "AP_HAB_LIT", 
			"RH_FERIAS", "RH_FALTAS", "RH_AUSENCIAS", "INT", "DG", "IBAN", "ESTADO_CIVIL", 
			"HAB_LITERARIAS", "MOEDA", "IMOB", "BARRA", "WORD", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Valida_forms.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Valida_formsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Valida_formsParser.EOF, 0); }
		public TerminalNode NEWLINE() { return getToken(Valida_formsParser.NEWLINE, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Valida_formsVisitor ) return ((Valida_formsVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case NEWLINE:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case TITULO1:
			case TITULO2:
			case TITULO3:
			case TITULO4:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				start();
				setState(58);
				prog();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(59);
					match(NEWLINE);
					}
				}

				setState(62);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public Titulo1_varContext titulo1;
		public Titulo2_varContext titulo2;
		public Titulo3_varContext titulo3;
		public Titulo4_varContext titulo4;
		public List<TerminalNode> NEWLINE() { return getTokens(Valida_formsParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(Valida_formsParser.NEWLINE, i);
		}
		public Tipo_de_reporteContext tipo_de_reporte() {
			return getRuleContext(Tipo_de_reporteContext.class,0);
		}
		public Titulo1_varContext titulo1_var() {
			return getRuleContext(Titulo1_varContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public Cotacoes_descontosContext cotacoes_descontos() {
			return getRuleContext(Cotacoes_descontosContext.class,0);
		}
		public Titulo2_varContext titulo2_var() {
			return getRuleContext(Titulo2_varContext.class,0);
		}
		public Alteracoes_pessoaisContext alteracoes_pessoais() {
			return getRuleContext(Alteracoes_pessoaisContext.class,0);
		}
		public Titulo3_varContext titulo3_var() {
			return getRuleContext(Titulo3_varContext.class,0);
		}
		public Ferias_justContext ferias_just() {
			return getRuleContext(Ferias_justContext.class,0);
		}
		public Titulo4_varContext titulo4_var() {
			return getRuleContext(Titulo4_varContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Valida_formsVisitor ) return ((Valida_formsVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TITULO1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				((StartContext)_localctx).titulo1 = titulo1_var();
				setState(67);
				match(NEWLINE);
				setState(68);
				tipo_de_reporte();
				setState(70);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(69);
					match(NEWLINE);
					}
					break;
				}
				setState(73);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(72);
					start();
					}
					break;
				}
				}
				break;
			case TITULO2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				((StartContext)_localctx).titulo2 = titulo2_var();
				setState(76);
				match(NEWLINE);
				setState(77);
				cotacoes_descontos();
				setState(79);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(78);
					match(NEWLINE);
					}
					break;
				}
				setState(82);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(81);
					start();
					}
					break;
				}
				}
				break;
			case TITULO3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				((StartContext)_localctx).titulo3 = titulo3_var();
				setState(85);
				match(NEWLINE);
				setState(86);
				alteracoes_pessoais();
				setState(88);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(87);
					match(NEWLINE);
					}
					break;
				}
				setState(91);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(90);
					start();
					}
					break;
				}
				}
				break;
			case TITULO4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				((StartContext)_localctx).titulo4 = titulo4_var();
				setState(94);
				match(NEWLINE);
				setState(95);
				ferias_just();
				setState(97);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(96);
					match(NEWLINE);
					}
					break;
				}
				setState(100);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(99);
					start();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Titulo1_varContext extends ParserRuleContext {
		public Titulo1_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo1_var; }
	 
		public Titulo1_varContext() { }
		public void copyFrom(Titulo1_varContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetTitulo1Context extends Titulo1_varContext {
		public TerminalNode TITULO1() { return getToken(Valida_formsParser.TITULO1, 0); }
		public SetTitulo1Context(Titulo1_varContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).enterSetTitulo1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).exitSetTitulo1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Valida_formsVisitor ) return ((Valida_formsVisitor<? extends T>)visitor).visitSetTitulo1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Titulo1_varContext titulo1_var() throws RecognitionException {
		Titulo1_varContext _localctx = new Titulo1_varContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_titulo1_var);
		try {
			_localctx = new SetTitulo1Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TITULO1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Titulo2_varContext extends ParserRuleContext {
		public Titulo2_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo2_var; }
	 
		public Titulo2_varContext() { }
		public void copyFrom(Titulo2_varContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetTitulo2Context extends Titulo2_varContext {
		public TerminalNode TITULO2() { return getToken(Valida_formsParser.TITULO2, 0); }
		public SetTitulo2Context(Titulo2_varContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).enterSetTitulo2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).exitSetTitulo2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Valida_formsVisitor ) return ((Valida_formsVisitor<? extends T>)visitor).visitSetTitulo2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Titulo2_varContext titulo2_var() throws RecognitionException {
		Titulo2_varContext _localctx = new Titulo2_varContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_titulo2_var);
		try {
			_localctx = new SetTitulo2Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(TITULO2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Titulo3_varContext extends ParserRuleContext {
		public Titulo3_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo3_var; }
	 
		public Titulo3_varContext() { }
		public void copyFrom(Titulo3_varContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetTitulo3Context extends Titulo3_varContext {
		public TerminalNode TITULO3() { return getToken(Valida_formsParser.TITULO3, 0); }
		public SetTitulo3Context(Titulo3_varContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).enterSetTitulo3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).exitSetTitulo3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Valida_formsVisitor ) return ((Valida_formsVisitor<? extends T>)visitor).visitSetTitulo3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Titulo3_varContext titulo3_var() throws RecognitionException {
		Titulo3_varContext _localctx = new Titulo3_varContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_titulo3_var);
		try {
			_localctx = new SetTitulo3Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(TITULO3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Titulo4_varContext extends ParserRuleContext {
		public Titulo4_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo4_var; }
	 
		public Titulo4_varContext() { }
		public void copyFrom(Titulo4_varContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetTitulo4Context extends Titulo4_varContext {
		public TerminalNode TITULO4() { return getToken(Valida_formsParser.TITULO4, 0); }
		public SetTitulo4Context(Titulo4_varContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).enterSetTitulo4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Valida_formsListener ) ((Valida_formsListener)listener).exitSetTitulo4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Valida_formsVisitor ) return ((Valida_formsVisitor<? extends T>)visitor).visitSetTitulo4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Titulo4_varContext titulo4_var() throws RecognitionException {
		Titulo4_varContext _localctx = new Titulo4_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_titulo4_var);
		try {
			_localctx = new SetTitulo4Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(TITULO4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
